--- a/player/page.html
+++ b/player/page.html
@@ -15,11 +15,16 @@
 <html>
 <body>
 
-This page has meta tags showcasing the Twitter Player Card. The video is courtesy of @TwitterDev via Vine.
+This page has meta tags showcasing the Twitter Player Card with a static MP4 file. The video is courtesy of @TwitterDev via Vine.
 
 <br><br>
 
 When implemented on your own site, please ensure that all links to video are secure (use https).
+
+<br><br>
+
+Lastly, the behavior of video playback is according to the following rules: https://dev.twitter.com/docs/cards/types/player-card
+
 </body>
 </html>
 
