--- a/player/page.html
+++ b/player/page.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <head>
-	<meta content='text/html; charset=UTF-8' http-equiv='Content-Type'/>
-	<meta name="twitter:card" content="player">
-	<meta name="twitter:site" content="@rchoi">
-	<meta name="twitter:title" content="Sample Player Card">
-	<meta name="twitter:description" content="This is a sample video. When you implement, make sure all links are secure.">
-	<meta name="twitter:image" content="https://yoursite.com/example.png">
-	<meta name="twitter:player" content="https://yoursite.com/container.html">
-	<meta name="twitter:player:width" content="480">
-	<meta name="twitter:player:height" content="480">
-	<meta name="twitter:player:stream" content="https://yoursite.com/example.mp4">
-	<meta name="twitter:player:stream:content_type" content="video/mp4">
+	<meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
+	<meta name="twitter:card" content="player" />
+	<meta name="twitter:site" content="@rchoi" />
+	<meta name="twitter:title" content="Sample Player Card" />
+	<meta name="twitter:description" content="This is a sample video. When you implement, make sure all links are secure." />
+	<meta name="twitter:image" content="https://yoursite.com/example.png" />
+	<meta name="twitter:player" content="https://yoursite.com/container.html" />
+	<meta name="twitter:player:width" content="480" />
+	<meta name="twitter:player:height" content="480" />
+	<meta name="twitter:player:stream" content="https://yoursite.com/example.mp4" />
+	<meta name="twitter:player:stream:content_type" content="video/mp4" />
 </head>
 <html>
 <body>
