--- a/player/page.html
+++ b/player/page.html
@@ -5,11 +5,11 @@
 	<meta name="twitter:site" content="@rchoi">
 	<meta name="twitter:title" content="Sample Player Card">
 	<meta name="twitter:description" content="This is a sample video. When you implement, make sure all links are secure.">
-	<meta name="twitter:image" content="https://yoursite.com/example.png">
-	<meta name="twitter:player" content="https://yoursite.com/container.html">
+	<meta name="twitter:image" content="twitter:image" content="https://smart-associates.biz/resources/Twitter-Card-Images/datarobot.jpg">
+	<meta name="twitter:player" content="https://www.smart-associates.biz/dev/player/container.html">
 	<meta name="twitter:player:width" content="480">
 	<meta name="twitter:player:height" content="480">
-	<meta name="twitter:player:stream" content="https://yoursite.com/example.mp4">
+	<meta name="twitter:player:stream" content="https://www.smart-associates.biz/dev/player/example.mp4">
 	<meta name="twitter:player:stream:content_type" content="video/mp4">
 </head>
 <html>
