--- a/player/page.html
+++ b/player/page.html
@@ -24,7 +24,7 @@ When implemented on your own site, please ensure that all links to video are sec
 
 <br><br>
 
-Lastly, the behavior of video playback is according to the following rules: https://dev.twitter.com/docs/cards/types/player-card
+Lastly, the behavior of video playback is according to the following rules: https://dev.twitter.com/cards/types/player
 
 </body>
 </html>
