--- a/player/page.html
+++ b/player/page.html
@@ -3,11 +3,11 @@
 <head>
 	<meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
 	<meta name="twitter:card" content="player" />
-	<meta name="twitter:site" content="@rchoi" />
+	<meta name="twitter:site" content="@mutazz1985" />
 	<meta name="twitter:title" content="Sample Player Card" />
 	<meta name="twitter:description" content="This is a sample video. When you implement, make sure all links are secure." />
 	<meta name="twitter:image" content="https://yoursite.com/example.png" />
-	<meta name="twitter:player" content="https://yoursite.com/container.html" />
+	<meta name="twitter:player" content="https://youtu.be/tHJ8Xe7t0lM" />
 	<meta name="twitter:player:width" content="480" />
 	<meta name="twitter:player:height" content="480" />
 	<meta name="twitter:player:stream" content="https://yoursite.com/example.mp4" />
