Remove "streaming" sample per card updates
Removed twitter:player:streaming sample
Fixed links to developer site

--- a/player/container.html
+++ b/player/container.html
@@ -3,18 +3,17 @@
 <body>
 
 <style type="text/css">
-video {  
-   width:100%; 
-   max-width:600px; 
-   height:auto; 
+video {
+   width:100%;
+   max-width:600px;
+   height:auto;
 }
 </style>
 
-<video width="100%" controls>
+<video controls>
   <source src="example.mp4" type="video/mp4">
 Your browser does not support video
 </video>
 
 </body>
 </html>
-
