update links and docs

--- a/player/container.html
+++ b/player/container.html
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+
 <body>
 
-<style type="text/css">
-video {
-   width:100%;
-   max-width:600px;
-   height:auto;
-}
-</style>
+  <title>video player</title>
+  <style type="text/css">
+    video {
+      width: 100%;
+      max-width: 600px;
+      height: auto;
+    }
+  </style>
 
-<video controls>
-  <source src="example.mp4" type="video/mp4">
-Your browser does not support video
-</video>
+  <video controls>
+    <source src="example.mp4" type="video/mp4">
+    Your browser does not support video
+  </video>
 
 </body>
+
 </html>
