--- a/player/page.html
+++ b/player/page.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-	<meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="twitter:card" content="player" />
 	<meta name="twitter:site" content="@TwitterDev" />
 	<meta name="twitter:title" content="Sample Player Card" />
-	<meta name="twitter:description" content="This is a sample video. When you implement, make sure all links are secure." />
+	<meta name="twitter:description"
+		content="This is a sample video. When you implement, make sure all links are secure." />
 	<meta name="twitter:image" content="https://yoursite.com/example.png" />
 	<meta name="twitter:player" content="https://yoursite.com/container.html" />
 	<meta name="twitter:player:width" content="480" />
@@ -13,16 +16,21 @@
 </head>
 
 <body>
+	<title>Card example</title>
 
-This page has meta tags showcasing the Twitter Player Card with a static MP4 file. The video is courtesy of @TwitterDev.
+	This page has meta tags showcasing the Twitter Player Card with a static MP4 file. The video is courtesy of
+	@TwitterDev.
 
-<br><br>
+	<br><br>
 
-When implemented on your own site, please ensure that all links to video are secure (use https).
+	When implemented on your own site, please ensure that all links to video are secure (use https).
 
-<br><br>
+	<br><br>
 
-Lastly, the behavior of video playback is according to the following rules: https://developer.twitter.com/en/docs/tweets/optimize-with-cards/overview/player-card
+	Lastly, the behavior of video playback is according to the <a
+		href="https://developer.twitter.com/en/docs/tweets/optimize-with-cards/overview/player-card">documented rules</a>.
+
 
 </body>
+
 </html>
