Changed yoursite[.]com to example[.]com

--- a/player/page.html
+++ b/player/page.html
@@ -9,8 +9,8 @@
 	<meta name="twitter:title" content="Sample Player Card" />
 	<meta name="twitter:description"
 		content="This is a sample video. When you implement, make sure all links are secure." />
-	<meta name="twitter:image" content="https://yoursite.com/example.png" />
-	<meta name="twitter:player" content="https://yoursite.com/container.html" />
+	<meta name="twitter:image" content="https://example.com/example.png" />
+	<meta name="twitter:player" content="https://example.com/container.html" />
 	<meta name="twitter:player:width" content="480" />
 	<meta name="twitter:player:height" content="480" />
 </head>
